Extension with Pictures

--- a/_notes/2022-07-24_Sun.md
+++ b/_notes/2022-07-24_Sun.md
@@ -14,6 +14,7 @@ Current month: [[2022-07]] | Next month: [[2022-08]]
 
 
 ## Notes of the day
+test1
 ![[Pasted image 20220625093603.png]]
 
 ![[Pasted image 20220705102700.png]]
